--- a/vc2013/BatchassSpidermoon.vcxproj.filters
+++ b/vc2013/BatchassSpidermoon.vcxproj.filters
@@ -14,88 +14,91 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
     <Filter Include="Blocks">
-      <UniqueIdentifier>{1ED05DAC-78D2-4339-91D7-324DA40B3FA3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\Choreograph">
-      <UniqueIdentifier>{2383604C-D61A-404C-8C5A-D94A37037BD3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\Choreograph\src">
-      <UniqueIdentifier>{EB319A26-350E-4B6A-B59C-B9E9A9316D1B}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\Choreograph\src\choreograph">
-      <UniqueIdentifier>{BE53646F-DCEE-4E72-B279-90C01763719D}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\Choreograph\src\choreograph\specialization">
-      <UniqueIdentifier>{3BC30099-641C-49C4-B3CB-4E75ACCD8AB5}</UniqueIdentifier>
+      <UniqueIdentifier>{68014CA3-DE88-46E9-987C-8A408273FFD9}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Cinder-Hap2">
-      <UniqueIdentifier>{2D37DBFD-7FFF-4DF7-930E-983086FFBB38}</UniqueIdentifier>
+      <UniqueIdentifier>{289A9AE7-D6A9-4DAE-BD91-E98EB15990AC}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Cinder-Hap2\src">
-      <UniqueIdentifier>{1A96262A-DE1F-4A0E-8752-2FCB5E2E834B}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\ImGui">
-      <UniqueIdentifier>{CBB01EEA-DD1F-49C4-95DE-FF05525910FE}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\ImGui\include">
-      <UniqueIdentifier>{046F5A1E-FAD8-4225-995E-9D471661B506}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\ImGui\lib">
-      <UniqueIdentifier>{FCA266F7-B6BD-4B64-8F10-A916CA1B36D4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\ImGui\lib\imgui">
-      <UniqueIdentifier>{1644AE9D-32A5-4DAD-90A6-728702320E2E}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Blocks\ImGui\src">
-      <UniqueIdentifier>{F5EA766D-94A4-4C92-BFFF-049228F580A7}</UniqueIdentifier>
+      <UniqueIdentifier>{9801EAAC-CA14-42ED-854D-DCF4801611F5}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Midi2">
-      <UniqueIdentifier>{42E8426C-08BE-4078-8F72-63DCF6869D68}</UniqueIdentifier>
+      <UniqueIdentifier>{D9038826-0CEE-4B32-B1E5-70C07D0D6961}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Midi2\include">
-      <UniqueIdentifier>{0686645C-8CCB-42A8-9353-44153E255870}</UniqueIdentifier>
+      <UniqueIdentifier>{2F08B662-22E8-4E36-9BBF-9B28F0105FE8}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Midi2\lib">
-      <UniqueIdentifier>{140A32D0-1DD4-4F7F-A696-E6F473E10ABF}</UniqueIdentifier>
+      <UniqueIdentifier>{8EB462E8-6172-4DCA-A976-CA4D1D33E025}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Midi2\src">
-      <UniqueIdentifier>{6C23D475-C679-4A23-8BB6-25081FF2EB79}</UniqueIdentifier>
+      <UniqueIdentifier>{04362E03-5E90-41FC-9663-47D2168F9648}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Videodromm">
-      <UniqueIdentifier>{C99A97A5-188D-4C3B-BC64-343DCEE6775A}</UniqueIdentifier>
+      <UniqueIdentifier>{85C65678-4DD5-48A3-AFF2-3B1CF4261B16}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Videodromm\include">
-      <UniqueIdentifier>{ABD43FCE-7B94-4D90-9B2F-590A454CAB35}</UniqueIdentifier>
+      <UniqueIdentifier>{174F1991-6495-446B-BEBB-B3B34612EF1C}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Videodromm\src">
-      <UniqueIdentifier>{4B84EE03-882A-4BCE-8613-CF8401049431}</UniqueIdentifier>
+      <UniqueIdentifier>{93445EED-A92A-4263-9906-44BD1FA6C5F8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Fbos">
+      <UniqueIdentifier>{AFB944CD-0DF8-4D7D-8D8E-2AE6227AF89B}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Fbos\include">
+      <UniqueIdentifier>{793E7CFF-9040-4AF9-9F08-713450CF8CFF}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Fbos\src">
+      <UniqueIdentifier>{E88F01BD-874E-4579-ADAE-44E91E64AAD0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Router">
+      <UniqueIdentifier>{0B20506A-5295-42B3-9CBD-BD3F119AD671}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Router\include">
+      <UniqueIdentifier>{5F8C32E6-AD0F-4BA5-8F8A-6C269C72A7A4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Router\src">
+      <UniqueIdentifier>{1E384EC2-DE96-4339-B479-CF9A742205C1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Textures">
+      <UniqueIdentifier>{1D160E38-7D23-41FA-B88C-2DB674A37BC8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Textures\include">
+      <UniqueIdentifier>{8C2967D6-986C-40B9-9A2B-5B0E67976FB1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Textures\src">
+      <UniqueIdentifier>{2A8B8D0F-BA95-4156-8697-1CC49FC89CD4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Warps">
+      <UniqueIdentifier>{5A94EC01-3E6B-4FC2-B9D8-99F0077B32FD}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Warps\include">
+      <UniqueIdentifier>{7392C57B-BCDF-4638-8079-5B9220CCEA43}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Blocks\Videodromm-Warps\src">
+      <UniqueIdentifier>{7BE6CDE8-1EB1-4871-9E6A-775C4A33323A}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Cinder-Warping">
-      <UniqueIdentifier>{B961146F-54F1-4694-A84B-389D69503E0E}</UniqueIdentifier>
+      <UniqueIdentifier>{066791F1-E951-4847-8576-81E125E063C9}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Cinder-Warping\include">
-      <UniqueIdentifier>{FBC378D6-C61B-4C3D-8174-B046C97228B2}</UniqueIdentifier>
+      <UniqueIdentifier>{CB109E06-A89B-462E-9312-9F1A71BB60D7}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Cinder-Warping\src">
-      <UniqueIdentifier>{4130A0BA-7FCB-42F7-A831-EB04C8D9588B}</UniqueIdentifier>
+      <UniqueIdentifier>{BE07A75E-7F80-49B9-8E48-F8CAD5900B91}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Cinder-WebSocketPP">
-      <UniqueIdentifier>{0B4266EA-FEF9-412C-B588-51D4601D7CD3}</UniqueIdentifier>
+      <UniqueIdentifier>{E91A9EB2-6C63-4819-A304-6EFB032B1D6C}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Cinder-WebSocketPP\src">
-      <UniqueIdentifier>{3D4FE601-A4C8-4B1F-95CA-6DD77A98765D}</UniqueIdentifier>
+      <UniqueIdentifier>{821B4FDF-F077-4139-8BCF-017D28B342FE}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\OSC">
-      <UniqueIdentifier>{C7A55B17-A352-415A-A4DC-08C13EE1F42B}</UniqueIdentifier>
+      <UniqueIdentifier>{8F2A2176-BE75-4A7C-A060-48A085B5F85A}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\OSC\src">
-      <UniqueIdentifier>{A977037C-94D1-49BE-99B4-AB3C47D70891}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Debug">
-      <UniqueIdentifier>{0feb8af3-518b-436a-aded-17bd1b0a7002}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Release">
-      <UniqueIdentifier>{e12ad468-9c28-4fa4-8905-bce88dc7cc70}</UniqueIdentifier>
+      <UniqueIdentifier>{843C446E-E714-47A9-A7B2-ADF40BD87BA2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -108,51 +111,6 @@
     <ClCompile Include="..\src\BatchassSpidermoonApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Motion.hpp">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Output.hpp">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Phrase.hpp">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Sequence.hpp">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\TimelineOptions.hpp">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Choreograph.h">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Cue.h">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Easing.h">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Timeline.h">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\TimelineItem.h">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\TimeType.h">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClInclude>
-    <ClCompile Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Cue.cpp">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\Timeline.cpp">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\TimelineItem.cpp">
-      <Filter>Blocks\Choreograph\src\choreograph</Filter>
-    </ClCompile>
-    <ClInclude Include="..\..\..\Cinder\blocks\Choreograph\src\choreograph\specialization\CinderSpecialization.hpp">
-      <Filter>Blocks\Choreograph\src\choreograph\specialization</Filter>
-    </ClInclude>
     <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Hap2\src\MovieHap.cpp">
       <Filter>Blocks\Cinder-Hap2\src</Filter>
     </ClCompile>
@@ -165,36 +123,6 @@
     <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Hap2\src\MovieHap.h">
       <Filter>Blocks\Cinder-Hap2\src</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-ImGui\include\CinderImGui.h">
-      <Filter>Blocks\ImGui\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-ImGui\include\imgui_user.h">
-      <Filter>Blocks\ImGui\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-ImGui\include\imgui_user.inl">
-      <Filter>Blocks\ImGui\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imconfig.h">
-      <Filter>Blocks\ImGui\lib\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui.h">
-      <Filter>Blocks\ImGui\lib\imgui</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui_internal.h">
-      <Filter>Blocks\ImGui\lib\imgui</Filter>
-    </ClInclude>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-ImGui\src\CinderImGui.cpp">
-      <Filter>Blocks\ImGui\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui.cpp">
-      <Filter>Blocks\ImGui\lib\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui_draw.cpp">
-      <Filter>Blocks\ImGui\lib\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-ImGui\lib\imgui\imgui_demo.cpp">
-      <Filter>Blocks\ImGui\lib\imgui</Filter>
-    </ClCompile>
     <ClInclude Include="..\..\..\Cinder\blocks\Cinder-MIDI2\include\CinderMidi.h">
       <Filter>Blocks\Midi2\include</Filter>
     </ClInclude>
@@ -228,28 +156,13 @@
     <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDAnimation.h">
       <Filter>Blocks\Videodromm\include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDAudio.h">
-      <Filter>Blocks\Videodromm\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDFbo.h">
-      <Filter>Blocks\Videodromm\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDHapMovie.h">
-      <Filter>Blocks\Videodromm\include</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDLog.h">
-      <Filter>Blocks\Videodromm\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDRouter.h">
       <Filter>Blocks\Videodromm\include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDSession.h">
       <Filter>Blocks\Videodromm\include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDSettings.h">
-      <Filter>Blocks\Videodromm\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDShaders.h">
       <Filter>Blocks\Videodromm\include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDUtils.h">
@@ -264,19 +177,7 @@
     <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDAnimation.cpp">
       <Filter>Blocks\Videodromm\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDAudio.cpp">
-      <Filter>Blocks\Videodromm\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDFbo.cpp">
-      <Filter>Blocks\Videodromm\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDHapMovie.cpp">
-      <Filter>Blocks\Videodromm\src</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDLog.cpp">
-      <Filter>Blocks\Videodromm\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDRouter.cpp">
       <Filter>Blocks\Videodromm\src</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDSession.cpp">
@@ -285,11 +186,38 @@
     <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDSettings.cpp">
       <Filter>Blocks\Videodromm\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDShaders.cpp">
-      <Filter>Blocks\Videodromm\src</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDUtils.cpp">
       <Filter>Blocks\Videodromm\src</Filter>
+    </ClCompile>
+    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Fbos\include\VDFbo.h">
+      <Filter>Blocks\Videodromm-Fbos\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Fbos\include\VDMix.h">
+      <Filter>Blocks\Videodromm-Fbos\include</Filter>
+    </ClInclude>
+    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Fbos\src\VDFbo.cpp">
+      <Filter>Blocks\Videodromm-Fbos\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Fbos\src\VDMix.cpp">
+      <Filter>Blocks\Videodromm-Fbos\src</Filter>
+    </ClCompile>
+    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Router\include\VDRouter.h">
+      <Filter>Blocks\Videodromm-Router\include</Filter>
+    </ClInclude>
+    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Router\src\VDRouter.cpp">
+      <Filter>Blocks\Videodromm-Router\src</Filter>
+    </ClCompile>
+    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Textures\include\VDTexture.h">
+      <Filter>Blocks\Videodromm-Textures\include</Filter>
+    </ClInclude>
+    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Textures\src\VDTexture.cpp">
+      <Filter>Blocks\Videodromm-Textures\src</Filter>
+    </ClCompile>
+    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Warps\include\VDWarp.h">
+      <Filter>Blocks\Videodromm-Warps\include</Filter>
+    </ClInclude>
+    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm-Warps\src\VDWarp.cpp">
+      <Filter>Blocks\Videodromm-Warps\src</Filter>
     </ClCompile>
     <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Warping\include\Warp.h">
       <Filter>Blocks\Cinder-Warping\include</Filter>
@@ -330,15 +258,6 @@
     <ClInclude Include="..\..\..\Cinder\blocks\OSC\src\Osc.h">
       <Filter>Blocks\OSC\src</Filter>
     </ClInclude>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDMix.cpp">
-      <Filter>Blocks\Videodromm\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\VDTexture.cpp">
-      <Filter>Blocks\Videodromm\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Cinder\blocks\Cinder-Videodromm\src\Character.cpp">
-      <Filter>Blocks\Videodromm\src</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
@@ -347,24 +266,10 @@
     <ClInclude Include="..\include\BatchassSpidermoonApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDMix.h">
-      <Filter>Blocks\Videodromm\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\VDTexture.h">
-      <Filter>Blocks\Videodromm\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Cinder\blocks\Cinder-Videodromm\include\Character.h">
-      <Filter>Blocks\Videodromm\include</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Xml Include="Debug\VDSettings.xml">
-      <Filter>Debug</Filter>
-    </Xml>
   </ItemGroup>
 </Project>
